[package]
name = "noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cgmath = "0.18.0"
easer = "0.3.0"
glam = "0.21.3"
hound = "3.5.0"
image = "0.24.3"
ndarray = "0.15.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
